# report

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
crates/report/: Cargo.toml
crates/report/src/: extensions.rs  lib.rs  prelude.rs  render.rs  report.rs  structured_error.rs
crates/report/src/attachments/: attach.rs  attached.rs  attachment.rs  mod.rs
crates/report/src/helpers/: mod.rs  test_helpers.rs  type_helpers.rs
crates/report/src/snapshots/: studiole_report__render__tests__report_render.snap  studiole_report__render__tests__report_render__with_source_and_additional.snap  studiole_report__report__tests__report_attach_path.snap  studiole_report__report__tests__report_debug__with_additional_and_source.snap  studiole_report__report__tests__report_debug__with_source.snap  studiole_report__report__tests__report_display__with_attach.snap  studiole_report__report__tests__report_display__with_attach_with.snap  studiole_report__structured_error__tests__structured_error_debug__with_source.snap  studiole_report__structured_error__tests__structured_error_display__with_attach.snap
