[package]
name = "studiole-report"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Report<T> and StructuredError types with miette diagnostic rendering"

[features]
default = []
render = ["miette/fancy"]

[dependencies]
miette = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
